--- a/02megaBackendProjectWithExpress/package.json
+++ b/02megaBackendProjectWithExpress/package.json
@@ -2,9 +2,10 @@
   "name": "02megabackendprojectwithexpress",
   "version": "1.0.0",
   "description": "start new project with backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon  src/index.js "
   },
   "keywords": [
     "nothing"
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11"
   }
 }
