--- a/02megaBackendProjectWithExpress/package.json
+++ b/02megaBackendProjectWithExpress/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon  src/index.js "
+    "dev": "nodemon --require dotenv/config src/index.js "
   },
   "keywords": [
     "nothing"
@@ -13,7 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.0.0",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4"
   }
 }
