--- a/02megaBackendProjectWithExpress/package.json
+++ b/02megaBackendProjectWithExpress/package.json
@@ -13,9 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
+    "cookie-parser": "^1.4.7",
+    "corp": "^1.0.4",
+    "cors": "^2.8.5",
+    "cros": "^1.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   },
   "devDependencies": {
